# openMerc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  audit_report.md  complexity_report.md  install.sh  memory_dump.md  proposed_changes.md  quality_report.md  refactor_plan.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  merc-review.yml
docs/: mercury-api.md  openmerc.1
patches/: 001_safe_write_queue.patch  002_cli_subcommands.patch  003_add_clap_dependency.patch
src/: agent.rs  agent_registry.rs  app.rs  auto_doc.rs  benchmark.rs  ci.rs  cli.rs  commands.rs  commands_new.rs  config.rs  context_aware.rs  engine.rs  error.rs  event.rs  headless.rs  health.rs  honcho_project.rs  knowledge_graph.rs  lib.rs  logger.rs  main.rs  merc_context.rs  metrics.rs  model_router.rs  next_edit.rs  onboard.rs  orchestrator.rs  plan.rs  plugin.rs  pr_review.rs  progress.rs  project_identity.rs  prompt_templates.rs  recap.rs  semfora.rs  session.rs  session_branch.rs  session_export.rs  smart_commit.rs  test_runner.rs  (+4 more)
src/api/: apply_edit.rs  fim.rs  mercury.rs  mod.rs  recap.rs
src/context/: honcho.rs  mod.rs
src/tools/: files.rs  mod.rs  registry.rs  sandbox.rs  search.rs  tasks.rs  tmux.rs
src/ui/: chat.rs  diff_panel.rs  input.rs  layout.rs  mod.rs  picker.rs  render.rs  status.rs
tests/: smoke_test.rs
