[package]
name = "openmerc"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / API
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File search
glob = "0.3"
grep-regex = "0.1"

# Utilities
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "0.8"
syntect = "5"
